fixed double scrollbar issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@ body {
   position: relative;
   background-color: black;
   font-family: monospace;
+  overflow: hidden;
 }
 
 #root {
